# trashd

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  deps.yml  release.yml
config/: trashd.toml
crates/trashd-cli/: Cargo.toml  build.rs
crates/trashd-cli/src/: cli.rs  main.rs  util.rs
crates/trashd-cli/src/commands/: compress.rs  config.rs  du.rs  empty.rs  find.rs  fsck.rs  info.rs  log.rs  ls.rs  mod.rs  purge.rs  restore.rs  self_update.rs  status.rs  undo.rs
crates/trashd-common/: Cargo.toml
crates/trashd-common/src/: config.rs  directorysizes.rs  index.rs  lib.rs  mounts.rs  oplog.rs  store.rs  trashinfo.rs
crates/trashd-daemon/: Cargo.toml
crates/trashd-daemon/src/: logger.rs  main.rs
crates/trashd-preload/: Cargo.toml
crates/trashd-preload/src/: lib.rs
crates/trashd-seccomp/: Cargo.toml
crates/trashd-seccomp/src/: filter.rs  main.rs  mem.rs  supervisor.rs  watchdog.rs
crates/trashd-shim/: Cargo.toml
crates/trashd-shim/src/: rm.rs
install/profile.d/: trashd.sh
install/systemd/: trashd-cleanup.service  trashd-cleanup.timer  trashd-daemon.service  trashd.service
packaging/: PKGBUILD  trashd.spec
tests/: integration.sh
