[workspace]
resolver = "2"
members = [
    "crates/trashd-common",
    "crates/trashd-cli",
    "crates/trashd-shim",
    "crates/trashd-preload",
    "crates/trashd-seccomp",
    "crates/trashd-daemon",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/faratech/trashd"
homepage = "https://github.com/faratech/trashd"
description = "A Linux recycle bin that works in scripts, cron, and at the desktop"
keywords = ["trash", "recycle-bin", "rm", "undelete", "linux"]
categories = ["command-line-utilities", "filesystem"]
