[package]
name = "trashd-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "trash"
path = "src/main.rs"

[dependencies]
trashd-common = { path = "../trashd-common" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
colored = "3"
zstd = "0.13"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
