[package]
name = "trashd-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "trash"
path = "src/main.rs"

[dependencies]
trashd-common = { path = "../trashd-common" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
colored = "3"
zstd = "0.13"
toml = "1"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
