[package]
name = "trashd-common"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zstd = "0.13"
toml = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
tempfile = "3"
