[package]
name = "trashd"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "trashd"
path = "src/main.rs"

[dependencies]
trashd-common = { path = "../trashd-common" }
libc = "0.2"
chrono = "0.4"
