[package]
name = "trashd-preload"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
chrono = "0.4"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "1"
