[package]
name = "trashd-shim"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "trashd-rm"
path = "src/rm.rs"

[dependencies]
trashd-common = { path = "../trashd-common" }
clap = { version = "4", features = ["derive"] }
